--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                   <li class="active"><a href="index.html">Home</a>
                   </li>
                   <li>
-                    <a href="#">Contact</a>
+                    <a href="#contact">Contact</a>
                   </li>
                   <li>
-                    <a href="#">Catalogue </a>
+                    <a href="#catalogue">Catalogue </a>
                   </li>
                   <li>
-                    <a href="#"> About </a>
+                    <a href="#about"> About </a>
                   </li>
                     </ul>
                   </li>
@@ -124,7 +124,7 @@
       </div>
     </section>
 
-    <section class="section1">
+    <section class="section1" id="contact">
       <div class="container">
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="servicebox text-center">
@@ -192,7 +192,7 @@
     <!-- end section -->
     <!-- end section2 -->
 
-    <section class="section4 text-center">
+    <section class="section4 text-center" id="catalogue">
       <div class="general-title">
         <h3>CATALOGUE</h3>
           <p>
@@ -216,57 +216,57 @@
             </a>
           </div>
 
-          <div class="item">
-            <a data-rel="prettyPhoto" href="pdf/metallic.pdf">
+           <div class="item">
+            <a href="pdf/metallic.pdf">
               <img
                 class="lazyOwl"
-                src="img/metallic.jpg"
-                data-src="img/metallic.jpg"
+                src="img/metallic.png"
+                data-src="img/metallic.png"
                 alt=""
               />
               <div>
-                <small>Product Design</small> <span>Project Name Here</span>
+                <small>Metallic Coatings</small> <span>Metallic Coatings</span>
                 <i class="fa fa-search"></i>
               </div>
             </a>
           </div>
 
           <div class="item">
-            <a href="single-portfolio-1.html">
+            <a href="pdf/multicolor.pdf">
               <img
                 class="lazyOwl"
-                src="img/portfolio_07.jpg"
-                data-src="img/portfolio_07.jpg"
+                src="img/multicolor.jpg"
+                data-src="img/multicolor.jpg"
                 alt=""
               />
               <div>
-                <small>Product Design</small> <span>Project Name Here</span>
+                <small>Multicolor Powder Coatings</small> <span>Multicolor Powder Coatings</span>
                 <i class="fa fa-link"></i>
               </div>
             </a>
           </div>
 
           <div class="item">
-            <a href="single-portfolio-1.html">
+            <a href="pdf/tricalcolor.pdf">
               <img
                 class="lazyOwl"
-                src="img/portfolio_05.jpg"
-                data-src="img/portfolio_05.jpg"
+                src="img/colordeck.jpg"
+                data-src="img/colordeck.jpg"
                 alt=""
               />
               <div>
-                <small>Product Design</small> <span>Project Name Here</span>
+                <small>Ral Color Deck</small> <span>Ral Color Deck</span>
                 <i class="fa fa-link"></i>
               </div>
             </a>
           </div>
 
-          <div class="item">
-            <a data-rel="prettyPhoto" href="img/portfolio_09.jpg">
+           <div class="item">
+            <a href="pdf/trudurance.pdf">
               <img
                 class="lazyOwl"
-                src="img/portfolio_09.jpg"
-                data-src="img/portfolio_09.jpg"
+                src="img/trudance.jpg"
+                data-src="img/trudance.jpg"
                 alt=""
               />
 
@@ -286,7 +286,7 @@
     </section>
     <!-- end section1 -->
 
-    <section class="section2">
+    <section class="section2" id="about">
       <div class="container">
         <div class="message text-center">
           <h2 class="big-title">ABOUT <span>US</span></h2>
@@ -316,7 +316,7 @@
             </p>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-12">
-            <a class="dmbutton button large pull-right" href="#"
+            <a class="dmbutton button large pull-right" href="mailto:flapowdercoating@att.net?subject=Quote From Website"
               ><i class="fa fa-download"></i> GET A QUOTE</a
             >
           </div>
@@ -354,7 +354,7 @@
       <div class="copyrights">
         <div class="container">
           <div class="col-lg-6 col-md-6 col-sm-12 columns footer-left">
-            <p>Copyright © 2014 - All rights reserved.</p>
+            <p>Copyright © 2019 - All rights reserved.</p>
             <div class="credits">
               <!--
               You are NOT allowed to delete the credit link to TemplateMag with free version.
@@ -362,7 +362,6 @@
               Buy the pro version with working PHP/AJAX contact form: https://templatemag.com/maxibiz-bootstrap-business-template/
               Licensing information: https://templatemag.com/license/
             -->
-              Created with MaxiBiz template by
               <a href="https://templatemag.com/">TemplateMag</a>
             </div>
           </div>
@@ -370,11 +369,10 @@
           <div class="col-lg-6 col-md-6 col-sm-12 columns text-right">
             <div class="footer-menu right">
               <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="#">Sitemap</a></li>
-                <li><a href="#">Site Terms</a></li>
-                <li><a href="contact">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#catalogue">Catalogue</a></li>
               </ul>
             </div>
           </div>
